--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Só o Combo+ oferece NewFlix+ e New Língua juntos para você ter acesso a cursos de diversas áreas da
                 tecnologia e aprender inglês ou espanhol, onde e como quiser.
             </p>
-            <a href="https://2cfrdds14.github.io/NewFlix/" class="container__botao secundario__botao" container>Assine o Combo+</a>
+            <a href="https://www.netflix.com/br/" class="container__botao secundario__botao" container>Assine o Combo+/parceria com a NetFlix</a>
         </div>
         <img src="Sites Branco e Preto.png" alt="Tela do NewFlix+ e New língua" class="secundario__imagem">
     </section>
