--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a NewFlix+ e o New Língua por um preço
                 único.</h1>
             <img src="NewFlix+NewLíngua.png" alt="O combo+ é a junção do NewFlix+ e o New Língua" class="container__imagem">
-            <a href="file:///C:/Users/ferna/Downloads/FILMES%20(1).html" class="container__botao">Assine por 12x de R$ 120,00*</a>
+            <a href="https://2cfrdds14.github.io/NewFlix/" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="https://2cfrdds14.github.io/NewFlix-Music/" class="container__botao botao_secundario">Assinar somente o NewFlix+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
