--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <img src="Fundo com computador .png" alt="Notebook com um dos projetos feitos por nossos programadores da NewFlix aberta"
             class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+            <h2 class="descricao__titulo">Veja os seus videos favoritos</h2>
+            <p class="descricao__texto">assista quando e onde quiser. Assim, seus favoritos estão sempre com
                 você, até mesmo sem internet.</p>
         </div>
     </section>
